* put dimensions in dimen.xml * put colors in colors.xml * created a helper method to generate the toast string * used button text for toast text rather than static text * removed onClickListeners and used onClick property in the XML * removed settings menu * changed minSDK version to 16

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,10 @@
 <resources>
+
+    <!-- Primary colors -->
     <color name="primary">#3F51B5</color>
     <color name="primary_dark">#1A237E</color>
     <color name="accent">#FF1744</color>
+
+    <!-- Text colors -->
+    <color name="button_text">#FFF</color>
 </resources>
