--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,13 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Button dimensions -->
+    <dimen name="button_width">225dp</dimen>
+    <dimen name="button_height">60dp</dimen>
+    <dimen name="button_top_margin">20dp</dimen>
+    <dimen name="button_margin">10dp</dimen>
+
+    <!-- Text size -->
+    <dimen name="heading_text">25dp</dimen>
 </resources>
